bindings/c/whiteout_textures.h


typedef struct whiteout_MipLevel whiteout_MipLevel;
typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_BlpParser whiteout_BlpParser;
typedef struct whiteout_BlpWriter whiteout_BlpWriter;
typedef struct whiteout_PngApngFrameInfo whiteout_PngApngFrameInfo;
typedef struct whiteout_PngParser whiteout_PngParser;
whiteout_MipLevel* whiteout_textures_MipLevel_new(void);
void whiteout_textures_MipLevel_delete(whiteout_MipLevel* self);
uint32_t whiteout_textures_MipLevel_get_width(const whiteout_MipLevel* self);
void whiteout_textures_MipLevel_set_width(whiteout_MipLevel* self, uint32_t value);
uint32_t whiteout_textures_MipLevel_get_height(const whiteout_MipLevel* self);
void whiteout_textures_MipLevel_set_height(whiteout_MipLevel* self, uint32_t value);
uint32_t whiteout_textures_MipLevel_get_depth(const whiteout_MipLevel* self);
void whiteout_textures_MipLevel_set_depth(whiteout_MipLevel* self, uint32_t value);
uint64_t whiteout_textures_MipLevel_get_offset(const whiteout_MipLevel* self);
void whiteout_textures_MipLevel_set_offset(whiteout_MipLevel* self, uint64_t value);
uint64_t whiteout_textures_MipLevel_get_size(const whiteout_MipLevel* self);
void whiteout_textures_MipLevel_set_size(whiteout_MipLevel* self, uint64_t value);
whiteout_Texture* whiteout_textures_Texture_new(void);
void whiteout_textures_Texture_delete(whiteout_Texture* self);
void whiteout_textures_Texture_format(whiteout_Texture* self, int32_t new_fmt);
int32_t whiteout_textures_Texture_format_overload2(const whiteout_Texture* self);
struct whiteout_Texture* whiteout_textures_Texture_copyAsFormat(const whiteout_Texture* self, int32_t new_fmt, void* pool);
int32_t whiteout_textures_Texture_swapChannels(whiteout_Texture* self, int32_t a, int32_t b);
int32_t whiteout_textures_Texture_invertChannel(whiteout_Texture* self, int32_t ch);
int32_t whiteout_textures_Texture_expandNormal(whiteout_Texture* self, int32_t xChannel, int32_t yChannel, int32_t zChannel);
int32_t whiteout_textures_Texture_fillChannel(whiteout_Texture* self, int32_t target, float value);
struct whiteout_Texture* whiteout_textures_Texture_copyFromNormalToRGBA(const whiteout_Texture* self, void* pool);
whiteout_CString whiteout_textures_Texture_generateMipmaps(whiteout_Texture* self, uint32_t newMipCount, void* pool);
whiteout_CString whiteout_textures_Texture_generateMipmaps_pool(whiteout_Texture* self, void* pool);
whiteout_CString whiteout_textures_Texture_downscale(whiteout_Texture* self, uint32_t levels, void* pool);
struct whiteout_Texture* whiteout_textures_Texture_create2D(int32_t fmt, uint32_t width, uint32_t height, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_create3D(int32_t fmt, uint32_t width, uint32_t height, uint32_t depth, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_createCube(int32_t fmt, uint32_t size, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_create2DArray(int32_t fmt, uint32_t width, uint32_t height, uint32_t arraySize, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_createCubeArray(int32_t fmt, uint32_t size, uint32_t arraySize, uint32_t mipCount);
int32_t whiteout_textures_Texture_type(const whiteout_Texture* self);
int32_t whiteout_textures_Texture_kind(const whiteout_Texture* self);
void whiteout_textures_Texture_setKind(whiteout_Texture* self, int32_t k);
int32_t whiteout_textures_Texture_channelKind(const whiteout_Texture* self, int32_t ch);
void whiteout_textures_Texture_setChannelKind(whiteout_Texture* self, int32_t ch, int32_t kind);
float whiteout_textures_Texture_channelDefault(const whiteout_Texture* self, int32_t ch);
void whiteout_textures_Texture_setChannelDefault(whiteout_Texture* self, int32_t ch, float value);
int32_t whiteout_textures_Texture_isSrgb(const whiteout_Texture* self);
void whiteout_textures_Texture_setSrgb(whiteout_Texture* self, int32_t srgb);
uint32_t whiteout_textures_Texture_width(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_height(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_depth(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_layerCount(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_arraySize(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_mipCount(const whiteout_Texture* self);
struct whiteout_MipLevel* whiteout_textures_Texture_mipLevel(const whiteout_Texture* self, uint32_t mip, uint32_t layer);
uint64_t whiteout_textures_Texture_dataSize(const whiteout_Texture* self);
whiteout_Bytes whiteout_textures_Texture_data(const whiteout_Texture* self);
whiteout_Bytes whiteout_textures_Texture_mipData(const whiteout_Texture* self, uint32_t mip, uint32_t layer);
whiteout_Bytes whiteout_textures_Texture_takeData(whiteout_Texture* self);
void whiteout_textures_Texture_setData(whiteout_Texture* self, const uint8_t* new_data, size_t new_data_size);
whiteout_BlpParser* whiteout_textures_BlpParser_new(void);
void whiteout_textures_BlpParser_delete(whiteout_BlpParser* self);
struct whiteout_Texture* whiteout_textures_BlpParser_parse(whiteout_BlpParser* self, const uint8_t* buffer, size_t buffer_size);
int32_t whiteout_textures_BlpParser_hasIssues(const whiteout_BlpParser* self);
size_t whiteout_textures_BlpParser_getIssues_count(const whiteout_BlpParser* self);
whiteout_CString whiteout_textures_BlpParser_getIssues_at(const whiteout_BlpParser* self, size_t index);
whiteout_BlpWriter* whiteout_textures_BlpWriter_new(void);
whiteout_BlpWriter* whiteout_textures_BlpWriter_new_pool(void* pool);
void whiteout_textures_BlpWriter_delete(whiteout_BlpWriter* self);
whiteout_Bytes whiteout_textures_BlpWriter_write(whiteout_BlpWriter* self, struct whiteout_Texture* texture);
int32_t whiteout_textures_BlpWriter_hasIssues(const whiteout_BlpWriter* self);
size_t whiteout_textures_BlpWriter_getIssues_count(const whiteout_BlpWriter* self);
whiteout_CString whiteout_textures_BlpWriter_getIssues_at(const whiteout_BlpWriter* self, size_t index);
whiteout_PngApngFrameInfo* whiteout_textures_PngApngFrameInfo_new(void);
void whiteout_textures_PngApngFrameInfo_delete(whiteout_PngApngFrameInfo* self);
uint32_t whiteout_textures_PngApngFrameInfo_get_width(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_width(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_height(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_height(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_xOffset(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_xOffset(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_yOffset(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_yOffset(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_delayMs(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_delayMs(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_disposeOp(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_disposeOp(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_blendOp(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_blendOp(whiteout_PngApngFrameInfo* self, uint32_t value);
whiteout_PngParser* whiteout_textures_PngParser_new(void);