bindings/csharp/Whiteout/Textures/NativeMethods.Textures.cs

// SPDX-License-Identifier: BSD-3-Clause
// Copyright (c) 2026 Fernando Sahmkow
// AUTOGENERATED by tools/codegen/emit_csharp.py — DO NOT EDIT.

using System.Runtime.InteropServices;

namespace Whiteout.Textures.Internal;

internal static partial class NativeMethods
{
    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_MipLevel_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_MipLevel_get_width(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_set_width(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_MipLevel_get_height(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_set_height(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_MipLevel_get_depth(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_set_depth(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_textures_MipLevel_get_offset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_set_offset(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_textures_MipLevel_get_size(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_MipLevel_set_size(IntPtr self, ulong value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_format(IntPtr self, int new_fmt);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_Texture_format_overload2(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_copyAsFormat(IntPtr self, int new_fmt, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_Texture_swapChannels(IntPtr self, int a, int b);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_Texture_invertChannel(IntPtr self, int ch);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_Texture_expandNormal(IntPtr self, int xChannel, int yChannel, int zChannel);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_Texture_fillChannel(IntPtr self, int target, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_copyFromNormalToRGBA(IntPtr self, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_Texture_generateMipmaps(IntPtr self, uint newMipCount, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_Texture_generateMipmaps_pool(IntPtr self, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_Texture_downscale(IntPtr self, uint levels, IntPtr pool);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_create2D(int fmt, uint width, uint height, uint mipCount);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_create3D(int fmt, uint width, uint height, uint depth, uint mipCount);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_createCube(int fmt, uint size, uint mipCount);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_create2DArray(int fmt, uint width, uint height, uint arraySize, uint mipCount);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_createCubeArray(int fmt, uint size, uint arraySize, uint mipCount);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_Texture_type(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_Texture_kind(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_setKind(IntPtr self, int k);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_textures_Texture_channelKind(IntPtr self, int ch);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_setChannelKind(IntPtr self, int ch, int kind);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_textures_Texture_channelDefault(IntPtr self, int ch);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_setChannelDefault(IntPtr self, int ch, float value);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_Texture_isSrgb(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_setSrgb(IntPtr self, int srgb);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_width(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_height(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_depth(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_layerCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_arraySize(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_Texture_mipCount(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_Texture_mipLevel(IntPtr self, uint mip, uint layer);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ulong whiteout_textures_Texture_dataSize(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_Texture_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_Texture_mipData(IntPtr self, uint mip, uint layer);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_Texture_takeData(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_Texture_setData(IntPtr self, ReadOnlySpan<byte> new_data, nuint new_data_size);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BlpParser_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_BlpParser_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BlpParser_parse(IntPtr self, ReadOnlySpan<byte> buffer, nuint buffer_size);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_BlpParser_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_BlpParser_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_BlpParser_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BlpWriter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_BlpWriter_new_pool(IntPtr pool);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_BlpWriter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeBytes whiteout_textures_BlpWriter_write(IntPtr self, IntPtr texture);


    [LibraryImport(Runtime.LibraryName)]
    [return: MarshalAs(UnmanagedType.I4)]
    internal static partial int whiteout_textures_BlpWriter_hasIssues(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_textures_BlpWriter_getIssues_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_textures_BlpWriter_getIssues_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngApngFrameInfo_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_width(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_width(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_height(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_height(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_xOffset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_xOffset(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_yOffset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_yOffset(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_delayMs(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_delayMs(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_disposeOp(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_disposeOp(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_textures_PngApngFrameInfo_get_blendOp(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_textures_PngApngFrameInfo_set_blendOp(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_textures_PngParser_new();
